# nlp-pkm

./:  README.md  .gitignore  LICENSE  README.md  pyproject.toml  re_index_notes.py  search_notes.py  visualise.ipynb
.devcontainer/: devcontainer.json
