[tool.poetry]
name = "subgroup-separability"
version = "0.1.0"
description = ""
authors = ["Charles Jones <cj1917@ic.ac.uk>"]
readme = "README.md"
packages = [{include = "subgroup_separability"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.1"
tqdm = "^4.64.1"
pandas = "^1.5.3"
ipykernel = "^6.20.2"
matplotlib = "^3.6.3"
sentence-transformers = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
gpustat = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
